CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(zonetest_sources
    ../zone/aa.cpp
    ../zone/aa_ability.cpp
    ../zone/aggro.cpp
    ../zone/aggromanager.cpp
    ../zone/api_service.cpp
    ../zone/attack.cpp
    ../zone/aura.cpp
    ../zone/beacon.cpp
    ../zone/bonuses.cpp
    ../zone/bot.cpp
    ../zone/bot_command.cpp
    ../zone/bot_database.cpp
    ../zone/botspellsai.cpp
    ../zone/cheat_manager.cpp
    ../zone/client.cpp
    ../zone/client_mods.cpp
    ../zone/client_packet.cpp
    ../zone/client_process.cpp
    ../zone/command.cpp
    ../zone/corpse.cpp
    ../zone/data_bucket.cpp
    ../zone/doors.cpp
    ../zone/dialogue_window.cpp
    ../zone/dynamic_zone.cpp
    ../zone/effects.cpp
    ../zone/embparser.cpp
    ../zone/embparser_api.cpp
    ../zone/embperl.cpp
    ../zone/embxs.cpp
    ../zone/encounter.cpp
    ../zone/entity.cpp
    ../zone/exp.cpp
    ../zone/expedition.cpp
    ../zone/expedition_database.cpp
    ../zone/expedition_request.cpp
    ../zone/fastmath.cpp
    ../zone/fearpath.cpp
    ../zone/forage.cpp
    ../zone/groups.cpp
    ../zone/guild.cpp
    ../zone/guild_mgr.cpp
    ../zone/hate_list.cpp
    ../zone/heal_rotation.cpp
    ../zone/horse.cpp
    ../zone/inventory.cpp
    ../zone/loottables.cpp
    ../zone/lua_bot.cpp
    ../zone/lua_bit.cpp
    ../zone/lua_corpse.cpp
    ../zone/lua_client.cpp
    ../zone/lua_door.cpp
    ../zone/lua_encounter.cpp
    ../zone/lua_entity.cpp
    ../zone/lua_entity_list.cpp
    ../zone/lua_expedition.cpp
    ../zone/lua_general.cpp
    ../zone/lua_group.cpp
    ../zone/lua_hate_list.cpp
    ../zone/lua_inventory.cpp
    ../zone/lua_item.cpp
    ../zone/lua_iteminst.cpp
    ../zone/lua_mob.cpp
    ../zone/lua_mod.cpp
    ../zone/lua_npc.cpp
    ../zone/lua_object.cpp
    ../zone/lua_packet.cpp
    ../zone/lua_parser.cpp
    ../zone/lua_parser_events.cpp
    ../zone/lua_raid.cpp
    ../zone/lua_spawn.cpp
    ../zone/lua_spell.cpp
    ../zone/lua_stat_bonuses.cpp
    ../zone/embperl.cpp
    ../zone/embxs.cpp
    ../zone/entity.cpp
    ../zone/exp.cpp
    ../zone/fearpath.cpp
    ../zone/forage.cpp
    ../zone/global_loot_manager.cpp
    ../zone/groups.cpp
    ../zone/guild.cpp
    ../zone/guild_mgr.cpp
    ../zone/hate_list.cpp
    ../zone/horse.cpp
    ../zone/inventory.cpp
    ../zone/loottables.cpp
    main.cpp
    ../zone/map.cpp
    ../zone/merc.cpp
    ../zone/mob.cpp
    ../zone/mob_ai.cpp
    ../zone/mob_appearance.cpp
    ../zone/mob_movement_manager.cpp
    ../zone/mob_info.cpp
    ../zone/mod_functions.cpp
    ../zone/npc.cpp
    ../zone/npc_ai.cpp
    ../zone/npc_scale_manager.cpp
    ../zone/object.cpp
    ../zone/oriented_bounding_box.cpp
    ../zone/pathfinder_interface.cpp
    ../zone/pathfinder_nav_mesh.cpp
    ../zone/pathfinder_null.cpp
    ../zone/pathing.cpp
    ../zone/perl_bot.cpp
    ../zone/perl_client.cpp
    ../zone/perl_doors.cpp
    ../zone/perl_entity.cpp
    ../zone/perl_expedition.cpp
    ../zone/perl_groups.cpp
    ../zone/perl_hateentry.cpp
    ../zone/perl_inventory.cpp
    ../zone/perl_mob.cpp
    ../zone/perl_npc.cpp
    ../zone/perl_object.cpp
    ../zone/perl_perlpacket.cpp
    ../zone/perl_player_corpse.cpp
    ../zone/perl_questitem.cpp
    ../zone/perl_raids.cpp
    ../zone/perl_spell.cpp
    ../zone/perlpacket.cpp
    ../zone/petitions.cpp
    ../zone/pets.cpp
    ../zone/position.cpp
    ../zone/qglobals.cpp
    ../zone/queryserv.cpp
    ../zone/questmgr.cpp
    ../zone/quest_parser_collection.cpp
    ../zone/raids.cpp
    ../zone/raycast_mesh.cpp
    ../zone/shared_task_zone_messaging.cpp
    ../zone/spawn2.cpp
    ../zone/spawn2.h
    ../zone/spawngroup.cpp
    ../zone/special_attacks.cpp
    ../zone/spell_effects.cpp
    ../zone/spells.cpp
    ../zone/task_client_state.cpp
    ../zone/task_goal_list_manager.cpp
    ../zone/task_manager.cpp
    ../zone/task_proximity_manager.cpp
    ../zone/tasks.cpp
    ../zone/titles.cpp
    ../zone/tradeskills.cpp
    ../zone/trading.cpp
    ../zone/trap.cpp
    ../zone/tribute.cpp
    ../zone/tune.cpp
    ../zone/water_map.cpp
    ../zone/water_map_v1.cpp
    ../zone/water_map_v2.cpp
    ../zone/waypoints.cpp
    ../zone/worldserver.cpp
    ../zone/xtargetautohaters.cpp
    ../zone/zone.cpp
    ../zone/zone_config.cpp
    ../zone/zonedb.cpp
    ../zone/zone_event_scheduler.cpp
    ../zone/zone_reload.cpp
    ../zone/zone_store.cpp
    ../zone/zoning.cpp
    )

SET(zonetest_headers
    catch.hpp
    ../zone/aa.h
    ../zone/aa_ability.h
    ../zone/aggromanager.h
    ../zone/api_service.h
    ../zone/aura.h
    ../zone/basic_functions.h
    ../zone/beacon.h
    ../zone/bot.h
    ../zone/bot_command.h
    ../zone/bot_database.h
    ../zone/bot_structs.h
    ../zone/cheat_manager.h
    ../zone/client.h
    ../zone/client_packet.h
    ../zone/command.h
    ../zone/common.h
    ../zone/corpse.h
    ../zone/data_bucket.h
    ../zone/doors.h
    ../zone/dialogue_window.h
    ../zone/dynamic_zone.h
    ../zone/embparser.h
    ../zone/embperl.h
    ../zone/embxs.h
    ../zone/encounter.h
    ../zone/entity.h
    ../zone/errmsg.h
    ../zone/event_codes.h
    ../zone/expedition.h
    ../zone/expedition_database.h
    ../zone/expedition_request.h
    ../zone/fastmath.h
    ../zone/forage.h
    ../zone/global_loot_manager.h
    ../zone/groups.h
    ../zone/guild_mgr.h
    ../zone/hate_list.h
    ../zone/heal_rotation.h
    ../zone/horse.h
    ../zone/lua_bot.h
    ../zone/lua_bit.h
    ../zone/lua_client.h
    ../zone/lua_corpse.h
    ../zone/lua_door.h
    ../zone/lua_encounter.h
    ../zone/lua_entity.h
    ../zone/lua_entity_list.h
    ../zone/lua_expedition.h
    ../zone/lua_general.h
    ../zone/lua_group.h
    ../zone/lua_hate_list.h
    ../zone/lua_inventory.h
    ../zone/lua_item.h
    ../zone/lua_iteminst.h
    ../zone/lua_mob.h
    ../zone/lua_mod.h
    ../zone/lua_npc.h
    ../zone/lua_object.h
    ../zone/lua_packet.h
    ../zone/lua_parser.h
    ../zone/lua_parser_events.h
    ../zone/lua_ptr.h
    ../zone/lua_raid.h
    ../zone/lua_spawn.h
    ../zone/lua_spell.h
    ../zone/lua_stat_bonuses.h
    ../zone/map.h
    ../zone/masterentity.h
    ../zone/maxskill.h
    ../zone/message.h
    ../zone/merc.h
    ../zone/mob.h
    ../zone/mob_movement_manager.h
    ../zone/npc.h
    ../zone/npc_ai.h
    ../zone/npc_scale_manager.h
    ../zone/object.h
    ../zone/oriented_bounding_box.h
    ../zone/pathfinder_interface.h
    ../zone/pathfinder_nav_mesh.h
    ../zone/pathfinder_null.h
    ../zone/perlpacket.h
    ../zone/petitions.h
    ../zone/pets.h
    ../zone/position.h
    ../zone/qglobals.h
    ../zone/quest_interface.h
    ../zone/queryserv.h
    ../zone/quest_interface.h
    ../zone/questmgr.h
    ../zone/quest_parser_collection.h
    ../zone/raids.h
    ../zone/raycast_mesh.h
    ../zone/skills.h
    ../zone/shared_task_zone_messaging.h
    ../zone/spawn2.cpp
    ../zone/spawn2.h
    ../zone/spawngroup.h
    ../zone/string_ids.h
    ../zone/task_client_state.h
    ../zone/task_goal_list_manager.h
    ../zone/task_manager.h
    ../zone/task_proximity_manager.h
    ../zone/tasks.h
    ../zone/titles.h
    ../zone/trap.h
    ../zone/water_map.h
    ../zone/water_map_v1.h
    ../zone/water_map_v2.h
    ../zone/worldserver.h
    ../zone/xtargetautohaters.h
    ../zone/zone.h
    ../zone/zone_event_scheduler.h
    ../zone/zone_config.h
    ../zone/zonedb.h
    ../zone/zonedump.h
    ../zone/zone_reload.h
    ../zone/zone_store.h
    )

SET(zonetest_gm_commands
    ../zone/gm_commands/acceptrules.cpp
    ../zone/gm_commands/advnpcspawn.cpp
    ../zone/gm_commands/aggro.cpp
    ../zone/gm_commands/aggrozone.cpp
    ../zone/gm_commands/ai.cpp
    ../zone/gm_commands/appearance.cpp
    ../zone/gm_commands/appearanceeffects.cpp
    ../zone/gm_commands/attack.cpp
    ../zone/gm_commands/augmentitem.cpp
    ../zone/gm_commands/ban.cpp
    ../zone/gm_commands/beard.cpp
    ../zone/gm_commands/beardcolor.cpp
    ../zone/gm_commands/bestz.cpp
    ../zone/gm_commands/bind.cpp
    ../zone/gm_commands/camerashake.cpp
    ../zone/gm_commands/castspell.cpp
    ../zone/gm_commands/chat.cpp
    ../zone/gm_commands/checklos.cpp
    ../zone/gm_commands/copycharacter.cpp
    ../zone/gm_commands/corpse.cpp
    ../zone/gm_commands/corpsefix.cpp
    ../zone/gm_commands/countitem.cpp
    ../zone/gm_commands/cvs.cpp
    ../zone/gm_commands/damage.cpp
    ../zone/gm_commands/databuckets.cpp
    ../zone/gm_commands/date.cpp
    ../zone/gm_commands/dbspawn2.cpp
    ../zone/gm_commands/delacct.cpp
    ../zone/gm_commands/deletegraveyard.cpp
    ../zone/gm_commands/delpetition.cpp
    ../zone/gm_commands/depop.cpp
    ../zone/gm_commands/depopzone.cpp
    ../zone/gm_commands/details.cpp
    ../zone/gm_commands/devtools.cpp
    ../zone/gm_commands/disablerecipe.cpp
    ../zone/gm_commands/disarmtrap.cpp
    ../zone/gm_commands/distance.cpp
    ../zone/gm_commands/doanim.cpp
    ../zone/gm_commands/door.cpp
    ../zone/gm_commands/door_manipulation.cpp
    ../zone/gm_commands/door_manipulation.h
    ../zone/gm_commands/dye.cpp
    ../zone/gm_commands/dz.cpp
    ../zone/gm_commands/dzkickplayers.cpp
    ../zone/gm_commands/editmassrespawn.cpp
    ../zone/gm_commands/emote.cpp
    ../zone/gm_commands/emotesearch.cpp
    ../zone/gm_commands/emoteview.cpp
    ../zone/gm_commands/enablerecipe.cpp
    ../zone/gm_commands/endurance.cpp
    ../zone/gm_commands/equipitem.cpp
    ../zone/gm_commands/face.cpp
    ../zone/gm_commands/faction.cpp
    ../zone/gm_commands/findclass.cpp
    ../zone/gm_commands/findfaction.cpp
    ../zone/gm_commands/findnpctype.cpp
    ../zone/gm_commands/findrace.cpp
    ../zone/gm_commands/findskill.cpp
    ../zone/gm_commands/findspell.cpp
    ../zone/gm_commands/findtask.cpp
    ../zone/gm_commands/findzone.cpp
    ../zone/gm_commands/fixmob.cpp
    ../zone/gm_commands/flag.cpp
    ../zone/gm_commands/flagedit.cpp
    ../zone/gm_commands/flags.cpp
    ../zone/gm_commands/flymode.cpp
    ../zone/gm_commands/fov.cpp
    ../zone/gm_commands/freeze.cpp
    ../zone/gm_commands/gassign.cpp
    ../zone/gm_commands/gearup.cpp
    ../zone/gm_commands/gender.cpp
    ../zone/gm_commands/getplayerburiedcorpsecount.cpp
    ../zone/gm_commands/getvariable.cpp
    ../zone/gm_commands/ginfo.cpp
    ../zone/gm_commands/giveitem.cpp
    ../zone/gm_commands/givemoney.cpp
    ../zone/gm_commands/globalview.cpp
    ../zone/gm_commands/gm.cpp
    ../zone/gm_commands/gmspeed.cpp
    ../zone/gm_commands/gmzone.cpp
    ../zone/gm_commands/goto.cpp
    ../zone/gm_commands/grid.cpp
    ../zone/gm_commands/guild.cpp
    ../zone/gm_commands/guildapprove.cpp
    ../zone/gm_commands/guildcreate.cpp
    ../zone/gm_commands/guildlist.cpp
    ../zone/gm_commands/hair.cpp
    ../zone/gm_commands/haircolor.cpp
    ../zone/gm_commands/haste.cpp
    ../zone/gm_commands/hatelist.cpp
    ../zone/gm_commands/heal.cpp
    ../zone/gm_commands/helm.cpp
    ../zone/gm_commands/heritage.cpp
    ../zone/gm_commands/heromodel.cpp
    ../zone/gm_commands/hideme.cpp
    ../zone/gm_commands/hp.cpp
    ../zone/gm_commands/incstat.cpp
    ../zone/gm_commands/instance.cpp
    ../zone/gm_commands/interrogateinv.cpp
    ../zone/gm_commands/interrupt.cpp
    ../zone/gm_commands/invsnapshot.cpp
    ../zone/gm_commands/invul.cpp
    ../zone/gm_commands/ipban.cpp
    ../zone/gm_commands/iplookup.cpp
    ../zone/gm_commands/iteminfo.cpp
    ../zone/gm_commands/itemsearch.cpp
    ../zone/gm_commands/kick.cpp
    ../zone/gm_commands/kill.cpp
    ../zone/gm_commands/killallnpcs.cpp
    ../zone/gm_commands/lastname.cpp
    ../zone/gm_commands/list.cpp
    ../zone/gm_commands/listpetition.cpp
    ../zone/gm_commands/loc.cpp
    ../zone/gm_commands/lock.cpp
    ../zone/gm_commands/logcommand.cpp
    ../zone/gm_commands/logs.cpp
    ../zone/gm_commands/makepet.cpp
    ../zone/gm_commands/mana.cpp
    ../zone/gm_commands/max_all_skills.cpp
    ../zone/gm_commands/memspell.cpp
    ../zone/gm_commands/merchantcloseshop.cpp
    ../zone/gm_commands/merchantopenshop.cpp
    ../zone/gm_commands/modifynpcstat.cpp
    ../zone/gm_commands/motd.cpp
    ../zone/gm_commands/movechar.cpp
    ../zone/gm_commands/movement.cpp
    ../zone/gm_commands/myskills.cpp
    ../zone/gm_commands/mysql.cpp
    ../zone/gm_commands/mystats.cpp
    ../zone/gm_commands/name.cpp
    ../zone/gm_commands/netstats.cpp
    ../zone/gm_commands/network.cpp
    ../zone/gm_commands/npccast.cpp
    ../zone/gm_commands/npcedit.cpp
    ../zone/gm_commands/npceditmass.cpp
    ../zone/gm_commands/npcemote.cpp
    ../zone/gm_commands/npcloot.cpp
    ../zone/gm_commands/npcsay.cpp
    ../zone/gm_commands/npcshout.cpp
    ../zone/gm_commands/npcspawn.cpp
    ../zone/gm_commands/npcspecialattk.cpp
    ../zone/gm_commands/npcstats.cpp
    ../zone/gm_commands/npctype_cache.cpp
    ../zone/gm_commands/npctypespawn.cpp
    ../zone/gm_commands/nudge.cpp
    ../zone/gm_commands/nukebuffs.cpp
    ../zone/gm_commands/nukeitem.cpp
    ../zone/gm_commands/object.cpp
    ../zone/gm_commands/oocmute.cpp
    ../zone/gm_commands/opcode.cpp
    ../zone/gm_commands/path.cpp
    ../zone/gm_commands/peekinv.cpp
    ../zone/gm_commands/peqzone.cpp
    ../zone/gm_commands/permaclass.cpp
    ../zone/gm_commands/permagender.cpp
    ../zone/gm_commands/permarace.cpp
    ../zone/gm_commands/petitems.cpp
    ../zone/gm_commands/petitioninfo.cpp
    ../zone/gm_commands/petname.cpp
    ../zone/gm_commands/pf.cpp
    ../zone/gm_commands/picklock.cpp
    ../zone/gm_commands/profanity.cpp
    ../zone/gm_commands/proximity.cpp
    ../zone/gm_commands/push.cpp
    ../zone/gm_commands/pvp.cpp
    ../zone/gm_commands/qglobal.cpp
    ../zone/gm_commands/questerrors.cpp
    ../zone/gm_commands/race.cpp
    ../zone/gm_commands/raidloot.cpp
    ../zone/gm_commands/randomfeatures.cpp
    ../zone/gm_commands/refreshgroup.cpp
    ../zone/gm_commands/reloadaa.cpp
    ../zone/gm_commands/reloadallrules.cpp
    ../zone/gm_commands/reloadcontentflags.cpp
    ../zone/gm_commands/reloademote.cpp
    ../zone/gm_commands/reloadlevelmods.cpp
    ../zone/gm_commands/reloadmerchants.cpp
    ../zone/gm_commands/reloadperlexportsettings.cpp
    ../zone/gm_commands/reloadqst.cpp
    ../zone/gm_commands/reloadstatic.cpp
    ../zone/gm_commands/reloadtitles.cpp
    ../zone/gm_commands/reloadtraps.cpp
    ../zone/gm_commands/reloadworld.cpp
    ../zone/gm_commands/reloadworldrules.cpp
    ../zone/gm_commands/reloadzps.cpp
    ../zone/gm_commands/removeitem.cpp
    ../zone/gm_commands/repop.cpp
    ../zone/gm_commands/resetaa.cpp
    ../zone/gm_commands/resetaa_timer.cpp
    ../zone/gm_commands/resetdisc_timer.cpp
    ../zone/gm_commands/revoke.cpp
    ../zone/gm_commands/roambox.cpp
    ../zone/gm_commands/rules.cpp
    ../zone/gm_commands/save.cpp
    ../zone/gm_commands/scale.cpp
    ../zone/gm_commands/scribespell.cpp
    ../zone/gm_commands/scribespells.cpp
    ../zone/gm_commands/sendzonespawns.cpp
    ../zone/gm_commands/sensetrap.cpp
    ../zone/gm_commands/serverinfo.cpp
    ../zone/gm_commands/serverrules.cpp
    ../zone/gm_commands/set_adventure_points.cpp
    ../zone/gm_commands/setaapts.cpp
    ../zone/gm_commands/setaaxp.cpp
    ../zone/gm_commands/setaltcurrency.cpp
    ../zone/gm_commands/setanim.cpp
    ../zone/gm_commands/setcrystals.cpp
    ../zone/gm_commands/setendurance.cpp
    ../zone/gm_commands/setfaction.cpp
    ../zone/gm_commands/setgraveyard.cpp
    ../zone/gm_commands/sethp.cpp
    ../zone/gm_commands/setlanguage.cpp
    ../zone/gm_commands/setlsinfo.cpp
    ../zone/gm_commands/setmana.cpp
    ../zone/gm_commands/setpass.cpp
    ../zone/gm_commands/setpvppoints.cpp
    ../zone/gm_commands/setskill.cpp
    ../zone/gm_commands/setskillall.cpp
    ../zone/gm_commands/setstartzone.cpp
    ../zone/gm_commands/setstat.cpp
    ../zone/gm_commands/setxp.cpp
    ../zone/gm_commands/showbonusstats.cpp
    ../zone/gm_commands/showbuffs.cpp
    ../zone/gm_commands/shownpcgloballoot.cpp
    ../zone/gm_commands/shownumhits.cpp
    ../zone/gm_commands/showskills.cpp
    ../zone/gm_commands/showspellslist.cpp
    ../zone/gm_commands/showstats.cpp
    ../zone/gm_commands/showzonegloballoot.cpp
    ../zone/gm_commands/showzonepoints.cpp
    ../zone/gm_commands/shutdown.cpp
    ../zone/gm_commands/size.cpp
    ../zone/gm_commands/spawn.cpp
    ../zone/gm_commands/spawnfix.cpp
    ../zone/gm_commands/spawnstatus.cpp
    ../zone/gm_commands/spellinfo.cpp
    ../zone/gm_commands/stun.cpp
    ../zone/gm_commands/summon.cpp
    ../zone/gm_commands/summonburiedplayercorpse.cpp
    ../zone/gm_commands/summonitem.cpp
    ../zone/gm_commands/suspend.cpp
    ../zone/gm_commands/task.cpp
    ../zone/gm_commands/tattoo.cpp
    ../zone/gm_commands/tempname.cpp
    ../zone/gm_commands/texture.cpp
    ../zone/gm_commands/time.cpp
    ../zone/gm_commands/timers.cpp
    ../zone/gm_commands/timezone.cpp
    ../zone/gm_commands/title.cpp
    ../zone/gm_commands/titlesuffix.cpp
    ../zone/gm_commands/traindisc.cpp
    ../zone/gm_commands/trapinfo.cpp
    ../zone/gm_commands/tune.cpp
    ../zone/gm_commands/ucs.cpp
    ../zone/gm_commands/undye.cpp
    ../zone/gm_commands/undyeme.cpp
    ../zone/gm_commands/unfreeze.cpp
    ../zone/gm_commands/unlock.cpp
    ../zone/gm_commands/unmemspell.cpp
    ../zone/gm_commands/unmemspells.cpp
    ../zone/gm_commands/unscribespell.cpp
    ../zone/gm_commands/unscribespells.cpp
    ../zone/gm_commands/updatechecksum.cpp
    ../zone/gm_commands/untraindisc.cpp
    ../zone/gm_commands/untraindiscs.cpp
    ../zone/gm_commands/uptime.cpp
    ../zone/gm_commands/version.cpp
    ../zone/gm_commands/viewcurrencies.cpp
    ../zone/gm_commands/viewnpctype.cpp
    ../zone/gm_commands/viewpetition.cpp
    ../zone/gm_commands/viewzoneloot.cpp
    ../zone/gm_commands/wc.cpp
    ../zone/gm_commands/weather.cpp
    ../zone/gm_commands/who.cpp
    ../zone/gm_commands/worldshutdown.cpp
    ../zone/gm_commands/worldwide.cpp
    ../zone/gm_commands/wp.cpp
    ../zone/gm_commands/wpadd.cpp
    ../zone/gm_commands/wpinfo.cpp
    ../zone/gm_commands/xtargets.cpp
    ../zone/gm_commands/zclip.cpp
    ../zone/gm_commands/zcolor.cpp
    ../zone/gm_commands/zheader.cpp
    ../zone/gm_commands/zonebootup.cpp
    ../zone/gm_commands/zonelock.cpp
    ../zone/gm_commands/zoneshutdown.cpp
    ../zone/gm_commands/zonestatus.cpp
    ../zone/gm_commands/zopp.cpp
    ../zone/gm_commands/zsafecoords.cpp
    ../zone/gm_commands/zsave.cpp
    ../zone/gm_commands/zsky.cpp
    ../zone/gm_commands/zstats.cpp
    ../zone/gm_commands/zunderworld.cpp
)

SOURCE_GROUP(zonetest_gm_commands FILES
    ${zonetest_gm_commands}
)

ADD_EXECUTABLE(zonetest ${zonetest_sources} ${zonetest_headers} ${zonetest_gm_commands})

INSTALL(TARGETS zonetest RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

ADD_DEFINITIONS(-DZONE)

TARGET_LINK_LIBRARIES(zonetest ${ZONE_LIBS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
